styles.css
/* ... */
 .header {
   background-color: #000;
   padding: 5px 50px;
   position: relative;
   z-index: 4;
   width: 100%;
   /* border: solid 1px blue; */
 }

 .header-logo {
   -webkit-transition: top 150ms ease-out;
   background-color: #000;
   height: 50px;
   position: fixed;
   right: 5px;
   top: 5px;
   transition: top 150ms ease-out;
   z-index: 5;
   width: 75px;
 }

 .header h1 {
   color: #fff;
   font-size: 35px;
   margin-bottom: 5px;
   position: relative;
 }

 .header h1::after {
   bottom: 7px;
   color: #00FFFF;
   font-size: 16px;
   content: 'Web Developer';
   position: absolute;
 }

 .header span {
   color: #FF00BF;
   font-size: 22px;
 }

 html {
   height: 100%;
   margin: 0;
   padding: 0;
   scroll-behavior: smooth;
   width: 100%;
 }

 .link {
   -webkit-transition: color 250ms ease;
   color: #FFDE00;
   transition: color 250ms ease;
 }

 .link:hover {
   color: #FFEC68;
 }

 .main {
   width: 100%;
 }

 .more {
   display: none;
 }

 .nav-button {
   -webkit-transition: all 250ms ease-in-out;
   color: #fff;
   font-family: 'Roboto', sans-serif;
   font-size: 25px;
   margin: 0 20px;
   padding: 0 0 0 10px;
   position: relative;
   text-decoration: none;
   transition: all 250ms ease-in-out;
 }

 .nav-button::before {
   -webkit-transform: translateY(-50%);
   -webkit-transition: all 250ms ease;
   background-color: #00FFFF;
   content: '';
   height: 0;
   left: 0;
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
   transition: all 250ms ease;
   width: 2px;
 }

 .nav-button:hover::before {
   height: 80%;
 }

 .nav-container {
   -ms-flex-align: center;
   -ms-flex-direction: row;
   -ms-flex-pack: center;
   -ms-flex-wrap: wrap;
   -webkit-box-align: center;
   -webkit-box-direction: normal;
   -webkit-box-orient: horizontal;
   -webkit-box-pack: center;
   align-items: center;
   background-color: #000;
   display: -ms-flexbox;
   display: -webkit-box;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   height: 75px;
   justify-content: center;
   position: relative;
   width: 100%;
   z-index: 2;
 }

 .nav-links-container {
   -ms-flex-direction: row;
   -ms-flex-pack: center;
   -webkit-box-direction: normal;
   -webkit-box-orient: horizontal;
   -webkit-box-pack: center;
   display: -ms-flexbox;
   display: -webkit-box;
   display: flex;
   flex-direction: row;
   justify-content: center;
   width: 100%;
   /* border: solid 1px blue; */
 }

 .photo-caption {
   font-size: 20px;
   margin: 0;
   padding: 0 10px;
 }

 .photo {
   height: 100%;
   width: 100%;
 }

 .photo-title {
   color: #00FFFF;
   display: block;
   font-size: 20px;
   padding: 0 0 0 10px;
 }

 .profile-photo {
   float: left;
   height: 325px;
   margin: 30px 20px 5px 50px;
   width: 250px;
 }

 .project-photo-container img {
   -webkit-transition: opacity 250ms ease;
   transition: opacity 250ms ease;
 }

 .project-photo-container img:hover {
   opacity: 0.85;
 }

 /* .banner {
   width: 80%;
   margin: 10px auto;
   position: relative;
 }

 .next,
 .prev {
   align-items: center;
   background-color: #000;
   border-radius: 50%;
   box-shadow: 0 2px 5px #333333;
   color: #fff;
   font-size: 40px;
   display: flex;
   height: 40px;
   justify-content: center;
   transition: opacity 250ms ease;
   width: 40px;
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
 }

 .next {
   right: 0;
 }

 .prev{
   left: 0;
 }

 .next:hover,
 .prev:hover {
   opacity: 0.5;
   cursor: pointer;
 }

 .project-photo{
   height: 100%;
   width: 100%;
 }

 .slide {
   height: 90%;
   width: 100%;
   position: absolute;
   opacity: 0;
   transition: all 1000ms ease;
   transform: translateX(130%);
 }

 .slide-container {
   display: flex;
   height: 550px;
   justify-content: center;
   position: relative;
   border: solid 1px red;
 }

 .slide.current {
   opacity: 1;
   transform: translateX(0);
 } */

 .read-button {
   -webkit-transition: color 250ms ease;
   background: none;
   border: none;
   color: #FFDE00;
   font-size: 16px;
   font-style: italic;
   transition: color 250ms ease;
 }

 .read-button:hover {
   color: #FFEC68;
   cursor: pointer;
 }

 .resume {
   font-size: 25px;
   text-align: center;
 }

 .social-media-container {
   -ms-flex-align: center;
   -ms-flex-direction: row;
   -ms-flex-pack: center;
   -ms-flex-wrap: wrap;
   -webkit-box-align: center;
   -webkit-box-direction: normal;
   -webkit-box-orient: horizontal;
   -webkit-box-pack: center;
   align-items: center;
   display: -ms-flexbox;
   display: -webkit-box;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
   margin: 50px 0;
 }

 .social-media-container a {
   -webkit-transition: all 250ms ease-in-out;
   color: #FF00BF;
   font-size: 50px;
   margin: 0 20px;
   padding: 0 0 0 5px;
   position: relative;
   text-shadow: 0 2px 2px #000;
   transition: all 250ms ease-in-out;
 }

 .social-media-container a::before {
   -webkit-transform: translateY(-50%);
   -webkit-transition: all 250ms ease;
   background-color: #00FFFF;
   content: '';
   height: 0;
   left: -5px;
   position: absolute;
   box-shadow: 0 2px 2px #000;
   top: 50%;
   transform: translateY(-50%);
   transition: all 250ms ease;
   width: 2px;
 }

 .social-media-container a:hover::before {
   height: 80%;
 }

 .up-arrow {
   -ms-flex-align: center;
   -ms-flex-pack: center;
   -webkit-box-align: center;
   -webkit-box-pack: center;
   -webkit-box-shadow: 0 2px 2px #000;
   -webkit-transition: all 250ms ease-in-out;
   align-items: center;
   background-color: #fff;
   border-radius: 50%;
   bottom: 5px;
   box-shadow: 0 2px 2px #000;
   color: #FF00BF;
   display: -ms-flexbox;
   display: -webkit-box;
   display: flex;
   font-size: 25px;
   height: 35px;
   justify-content: center;
   padding-bottom: 5px;
   position: fixed;
   right: -60px;
   text-decoration: none;
   text-shadow: 0 2px 2px #000;
   transition: all 250ms ease-in-out;
   width: 35px;
   z-index: 3;
 }
/* ... */

